<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/lomolab_app_name">

    <Preference
        android:key="category_appearance_fonts"
        android:title="@string/category_appearance_fonts_title"
        android:summary="@string/category_appearance_fonts_summary"
        android:icon="@drawable/ic_appearance_fonts" />

    <Preference
        android:key="category_status_bar"
        android:title="@string/category_status_bar_title"
        android:summary="@string/category_status_bar_summary"
        android:icon="@drawable/ic_status_bar" />

    <Preference
        android:key="category_super_island"
        android:title="@string/category_super_island_title"
        android:summary="@string/category_super_island_summary"
        android:icon="@drawable/ic_super_island" />

    <Preference
        android:key="category_control_center"
        android:title="@string/category_control_center_title"
        android:summary="@string/category_control_center_summary"
        android:icon="@drawable/ic_control_center" />

    <Preference
        android:key="category_animations"
        android:title="@string/category_animations_title"
        android:summary="@string/category_animations_summary"
        android:icon="@drawable/ic_animations" />

    <Preference
        android:key="category_pixel_features"
        android:title="@string/category_pixel_features_title"
        android:summary="@string/category_pixel_features_summary"
        android:icon="@drawable/ic_pixel_features" />

    <Preference
        android:key="category_gemini_hilight"
        android:title="@string/category_gemini_hilight_title"
        android:summary="@string/category_gemini_hilight_summary"
        android:icon="@drawable/ic_gemini_hilight" />

    <Preference
        android:key="category_experimental"
        android:title="@string/category_experimental_title"
        android:summary="@string/category_experimental_summary"
        android:icon="@drawable/ic_experimental" />

    <Preference
        android:key="category_about_lomolab"
        android:title="@string/category_about_lomolab_title"
        android:summary="@string/category_about_lomolab_summary"
        android:icon="@drawable/ic_about_lomolab" />

</PreferenceScreen>
