<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/category_super_island_title">

    <PreferenceCategory android:title="@string/category_super_island_title">
        <SwitchPreferenceCompat
            android:key="super_island_enabled"
            android:title="@string/super_island_enabled_title"
            android:summary="@string/super_island_enabled_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="island_display_mode"
            android:title="@string/island_display_mode_title"
            android:summary="%s"
            android:entries="@array/island_display_mode_entries"
            android:entryValues="@array/island_display_mode_values"
            android:defaultValue="0" />

        <SwitchPreferenceCompat
            android:key="island_event_media"
            android:title="@string/island_event_media_title"
            android:summary="@string/island_event_media_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="island_event_charging"
            android:title="@string/island_event_charging_title"
            android:summary="@string/island_event_charging_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="island_event_headset"
            android:title="@string/island_event_headset_title"
            android:summary="@string/island_event_headset_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="island_event_call"
            android:title="@string/island_event_call_title"
            android:summary="@string/island_event_call_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="island_event_recording"
            android:title="@string/island_event_recording_title"
            android:summary="@string/island_event_recording_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="island_event_timer"
            android:title="@string/island_event_timer_title"
            android:summary="@string/island_event_timer_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="island_event_flashlight"
            android:title="@string/island_event_flashlight_title"
            android:summary="@string/island_event_flashlight_summary"
            android:defaultValue="true" />

        <Preference
            android:key="deep_link_avium_featuresettings_island"
            android:title="@string/open_avium_featuresettings" />
    </PreferenceCategory>

</PreferenceScreen>
