<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/category_gemini_hilight_title">

    <PreferenceCategory android:title="@string/category_gemini_hilight_title">
        <SwitchPreferenceCompat
            android:key="lomolab_hilight_enabled"
            android:title="@string/hilight_enable_title"
            android:summary="@string/hilight_enable_summary"
            android:defaultValue="false" />

        <Preference
            android:key="lomolab_hilight_assistant_info"
            android:title="@string/hilight_assistant_detect_title"
            android:summary="@string/hilight_assistant_detect_summary"
            android:selectable="false" />

        <SwitchPreferenceCompat
            android:key="lomolab_hilight_listening_enabled"
            android:title="@string/hilight_listening_title"
            android:summary="@string/hilight_listening_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="lomolab_hilight_thinking_enabled"
            android:title="@string/hilight_thinking_title"
            android:summary="@string/hilight_thinking_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="lomolab_hilight_responding_enabled"
            android:title="@string/hilight_responding_title"
            android:summary="@string/hilight_responding_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="lomolab_hilight_screen_off_only"
            android:title="@string/hilight_screen_off_title"
            android:summary="@string/hilight_screen_off_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="lomolab_hilight_disable_charging"
            android:title="@string/hilight_disable_charging_title"
            android:summary="@string/hilight_disable_charging_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="lomolab_hilight_test_led"
            android:title="@string/hilight_test_title"
            android:summary="@string/hilight_test_summary"
            android:entries="@array/test_led_entries"
            android:entryValues="@array/test_led_values" />
    </PreferenceCategory>

</PreferenceScreen>
