<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/category_status_bar_title">

    <PreferenceCategory android:title="@string/category_status_bar_title">
        <SwitchPreferenceCompat
            android:key="status_bar_capsule_enabled"
            android:title="@string/status_bar_capsule_title"
            android:summary="@string/status_bar_capsule_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="lomolab_status_bar_network_traffic"
            android:title="@string/network_traffic_title"
            android:summary="@string/network_traffic_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="lomolab_status_bar_battery_style"
            android:title="@string/battery_style_title"
            android:summary="%s"
            android:entries="@array/battery_style_entries"
            android:entryValues="@array/battery_style_values"
            android:defaultValue="0" />
    </PreferenceCategory>

</PreferenceScreen>
