<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/category_experimental_title">

    <PreferenceCategory android:title="@string/category_experimental_title">
        <SwitchPreferenceCompat
            android:key="lomolab_exp_memory_compaction"
            android:title="@string/exp_memory_compaction_title"
            android:summary="@string/exp_memory_compaction_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="lomolab_exp_game_touch_tuning"
            android:title="@string/exp_game_touch_tuning_title"
            android:summary="@string/exp_game_touch_tuning_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
