<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/category_control_center_title">

    <PreferenceCategory android:title="@string/category_control_center_title">
        <ListPreference
            android:key="avium_control_center_style"
            android:title="@string/control_center_style_title"
            android:summary="%s"
            android:entries="@array/control_center_style_entries"
            android:entryValues="@array/control_center_style_values"
            android:defaultValue="0" />

        <SwitchPreferenceCompat
            android:key="avium_control_center_blur"
            android:title="@string/control_center_blur_title"
            android:summary="@string/control_center_blur_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="avium_control_center_blur_intensity"
            android:title="@string/control_center_blur_intensity_title"
            android:summary="%s"
            android:entries="@array/control_center_blur_intensity_entries"
            android:entryValues="@array/control_center_blur_intensity_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="lomolab_control_center_quick_pulldown"
            android:title="@string/control_center_quick_pulldown_title"
            android:summary="%s"
            android:entries="@array/quick_pulldown_entries"
            android:entryValues="@array/quick_pulldown_values"
            android:defaultValue="0" />
    </PreferenceCategory>

</PreferenceScreen>
