<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/category_animations_title">

    <PreferenceCategory android:title="@string/category_animations_title">
        <ListPreference
            android:key="lomolab_screen_off_animation"
            android:title="@string/screen_off_anim_title"
            android:summary="%s"
            android:entries="@array/screen_off_anim_entries"
            android:entryValues="@array/screen_off_anim_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="window_animation_scale"
            android:title="@string/window_animation_scale_title"
            android:summary="%s"
            android:entries="@array/control_center_blur_intensity_entries"
            android:entryValues="@array/control_center_blur_intensity_values"
            android:defaultValue="0" />
    </PreferenceCategory>

</PreferenceScreen>
